--- a/src/App.css
+++ b/src/App.css
@@ -4,10 +4,10 @@
 }
 
 .colour-border{
-  border: 3px solid green;
+  border: 3px solid mediumslateblue;
   padding: 10px;
 }
 
 .header{
-  padding: 10px;
+  padding: 50px;
 }
