Mission 18 - adding a new Jenkinsfile

--- a/src/App.css
+++ b/src/App.css
@@ -4,10 +4,10 @@
 }
 
 .colour-border{
-  border: 3px solid mediumslateblue;
+  border: 3px solid orange;
   padding: 10px;
 }
 
 .header{
-  padding: 50px;
+  padding: 20px;
 }
